# cameroon-mark

cameroon-mark-backend/: .env  .gitignore  Cargo.toml  README.md  bACKEND.MD  cors-policy.json  cors.json  docker-compose.yml
cameroon-mark-backend/migrations/: 20240507000000_initial_schema.sql  20240512000000_add_saved_items.sql  20240512000001_fix_product_images.sql  20240512000002_add_default_categories.sql  20240514_add_image_and_slug_to_categories.down.sql  20240514_add_image_and_slug_to_categories.up.sql  20250516000000_add_structured_address_to_users.down.sql  20250516000000_add_structured_address_to_users.up.sql
cameroon-mark-backend/src/: lib.rs  main.rs  state.rs
cameroon-mark-backend/src/config/: mod.rs
cameroon-mark-backend/src/entities/: campaign.rs  category.rs  discount_code.rs  email_campaign.rs  mod.rs  order.rs  order_item.rs  product.rs  reported_item.rs  saved_item.rs  user.rs
cameroon-mark-backend/src/errors/: mod.rs
cameroon-mark-backend/src/handlers/: admin.rs  analytics.rs  auth.rs  cart.rs  category.rs  marketing.rs  message.rs  mod.rs  order.rs  product.rs  saved_item.rs  upload.rs  user.rs
cameroon-mark-backend/src/middlewares/: auth.rs
cameroon-mark-backend/src/models/: admin.rs  analytics.rs  analytics_enhancement.rs  cart.rs  category.rs  financial.rs  marketing.rs  message.rs  message_enhancement.rs  mod.rs  order.rs  order_enhancement.rs  product.rs  product_enhancement.rs  review.rs  saved_item.rs  user.rs
cameroon-mark-backend/src/routes/: admin.rs  analytics.rs  auth.rs  cart.rs  category.rs  marketing.rs  message.rs  mod.rs  order.rs  product.rs  saved_item.rs  upload.rs  user.rs
cameroon-mark-backend/src/services/: admin.rs  analytics.rs  analytics_enhancement.rs  auth.rs  cart.rs  category.rs  financial.rs  marketing.rs  message.rs  message_enhancement.rs  mod.rs  order.rs  order_enhancement.rs  product.rs  product_enhancement.rs  saved_item.rs  upload.rs  user.rs
(+46 files in other folders)
