[package]
name = "cameroon-mark-backend"
version = "0.1.0"
edition = "2021"

[dependencies]


# Web framework
axum = { version = "0.7", features = ["multipart", "tokio", "http1", "macros"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tokio = { version = "1.45.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }

# Database
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "bigdecimal", "chrono"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }


# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Authentication
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
rand = "0.8.5"

# Validation
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.11.1"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Configuration
dotenv = "0.15.0"
config = "0.15.11"

# AWS SDK for MinIO/S3
aws-sdk-s3 = "1.84.0"
aws-config = "1.6.2"

# Async traits
async-trait = "0.1.88"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3.41", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11.27", features = ["json"] }

# Misc
once_cell = "1.21.3"
futures = "0.3.31"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.0"
sea-orm = { version = "1.1.10", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "with-uuid", "with-chrono", "with-json", "with-bigdecimal", "postgres-array"] }

# ORM

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.4"
